# sqlalchemy-multiprocessed

./: docker-compose.yml  generate_data.py  main.py  polars_test.py  pyproject.toml
